--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,14 @@
-<div>
-  hello
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="display-4">Sacbee Sports Articles</h1>
+    <p class="lead">These are the articles from the Sacbee Sports page.</p>
+    <hr class="my-4">
+
+
+  </div>
+  <hr>
+  <div class="row" id="mainRow">
+
+
+  </div>
 </div>
